--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
   </parent>
 
   <artifactId>vertx-mongo-embedded-db</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0</version>
 
   <name>Vert.x Mongo Embedded DB</name>
 
   <properties>
-    <stack.version>3.0.0-SNAPSHOT</stack.version>
+    <stack.version>3.0.0</stack.version>
   </properties>
 
   <dependencyManagement>
