--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,16 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>5</version>
+    <version>8</version>
   </parent>
 
   <artifactId>vertx-mongo-embedded-db</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.2.0-SNAPSHOT</version>
 
   <name>Vert.x Mongo Embedded DB</name>
 
   <properties>
-    <stack.version>3.1.0-SNAPSHOT</stack.version>
+    <stack.version>3.2.0-SNAPSHOT</stack.version>
   </properties>
 
   <dependencyManagement>
@@ -58,9 +58,22 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <!-- declare this dependency to force flapdoodle to use this one. -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.12</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
       <version>1.48.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
