--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ jobs:
       script: mvn -q clean verify -B
     - stage: deploy
       name: "Deploy to Sonatype's snapshots repository"
-      if: type != pull_request
+      if: type != pull_request AND env(SONATYPE_NEXUS_USERNAME) IS present
       script: bash .travis.deploy.artifacts.sh
 notifications:
   email:
     recipients:
-      - vertx3-ci@googlegroups.com
+      - secure: "I0wVLGV4DfqK8JBVqkPhaFz4NnjGZMCf3XbSUqUJFtL6oDgortsywZtubAbeR6qBraYX6cC4uPCMOe5O9lVF3wPme9gWRl5wv/A/MceBJ/pWIYwJfomkKoVTTfSlxwJwsAmEKldLJ72i88fCz7QOgTswjU6ZXSy+27/nKY+WIeQ="
     on_success: always
     on_failure: always
