--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
   </parent>
 
   <artifactId>vertx-mongo-embedded-db</artifactId>
-  <version>3.9.1</version>
+  <version>3.9.2-SNAPSHOT</version>
 
   <name>Vert.x Mongo Embedded DB</name>
 
   <properties>
-    <stack.version>3.9.1</stack.version>
+    <stack.version>3.9.2-SNAPSHOT</stack.version>
   </properties>
 
   <dependencyManagement>
