--- a/pom.xml
+++ b/pom.xml
@@ -14,100 +14,179 @@
   ~
   ~  You may elect to redistribute this code under either of these licenses.
   --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-  <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>io.vertx</groupId>
-    <artifactId>vertx-parent</artifactId>
-    <version>19</version>
-  </parent>
-
-  <artifactId>vertx-mongo-embedded-db</artifactId>
-  <version>3.9.9-SNAPSHOT</version>
-
-  <name>Vert.x Mongo Embedded DB</name>
-
-  <properties>
-    <stack.version>3.9.9-SNAPSHOT</stack.version>
-  </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
+      
+    <modelVersion>4.0.0</modelVersion>
+      
+    <parent>
+            
         <groupId>io.vertx</groupId>
-        <artifactId>vertx-dependencies</artifactId>
-        <version>${stack.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+            
+        <artifactId>vertx-parent</artifactId>
+            
+        <version>19</version>
+          
+    </parent>
+      
+    <artifactId>vertx-mongo-embedded-db</artifactId>
+      
+    <version>3.9.9</version>
+      
+    <name>Vert.x Mongo Embedded DB</name>
+      
+    <properties>
+            
+        <stack.version>3.9.9</stack.version>
+          
+    </properties>
+      
+    <dependencyManagement>
+            
+        <dependencies>
+                  
+            <dependency>
+                        
+                <groupId>io.vertx</groupId>
+                        
+                <artifactId>vertx-dependencies</artifactId>
+                        
+                <version>${stack.version}</version>
+                        
+                <type>pom</type>
+                        
+                <scope>import</scope>
+                      
+            </dependency>
+                
+        </dependencies>
+          
+    </dependencyManagement>
+      
+    <dependencies>
+            
+        <dependency>
+                  
+            <groupId>io.vertx</groupId>
+                  
+            <artifactId>vertx-core</artifactId>
+                
+        </dependency>
+            
+        <dependency>
+                  
+            <groupId>io.vertx</groupId>
+                  
+            <artifactId>vertx-service-factory</artifactId>
+                  
+            <scope>test</scope>
+                
+        </dependency>
+            
+        <dependency>
+                  
+            <!-- declare this dependency to force flapdoodle to use this one. -->
+                  
+            <groupId>org.slf4j</groupId>
+                  
+            <artifactId>slf4j-api</artifactId>
+                  
+            <version>1.7.21</version>
+                  
+            <scope>provided</scope>
+                
+        </dependency>
+            
+        <dependency>
+                  
+            <groupId>de.flapdoodle.embed</groupId>
+                  
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+                  
+            <version>2.0.3</version>
+                  
+            <exclusions>
+                        
+                <exclusion>
+                              
+                    <groupId>org.slf4j</groupId>
+                              
+                    <artifactId>slf4j-api</artifactId>
+                            
+                </exclusion>
+                      
+            </exclusions>
+                
+        </dependency>
+            
+        <dependency>
+                  
+            <groupId>io.vertx</groupId>
+                  
+            <artifactId>vertx-core</artifactId>
+                  
+            <type>test-jar</type>
+                  
+            <scope>test</scope>
+                
+        </dependency>
+            
+        <dependency>
+                  
+            <groupId>junit</groupId>
+                  
+            <artifactId>junit</artifactId>
+                  
+            <scope>test</scope>
+                  
+            <version>4.13.1</version>
+                
+        </dependency>
+          
     </dependencies>
-  </dependencyManagement>
-
-  <dependencies>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-service-factory</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <!-- declare this dependency to force flapdoodle to use this one. -->
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.21</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo</artifactId>
-      <version>2.0.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-      <version>4.13.1</version>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven.jar.plugin.version}</version>
-          <executions>
-            <execution>
-              <id>default-jar</id>
-              <configuration>
-                <archive>
-                  <manifestEntries>
-                    <Main-Verticle>service:io.vertx.vertx-mongo-embedded-db</Main-Verticle>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
+      
+    <build>
+            
+        <pluginManagement>
+                  
+            <plugins>
+                        
+                <plugin>
+                              
+                    <groupId>org.apache.maven.plugins</groupId>
+                              
+                    <artifactId>maven-jar-plugin</artifactId>
+                              
+                    <version>${maven.jar.plugin.version}</version>
+                              
+                    <executions>
+                                    
+                        <execution>
+                                          
+                            <id>default-jar</id>
+                                          
+                            <configuration>
+                                                
+                                <archive>
+                                                      
+                                    <manifestEntries>
+                                                            
+                                        <Main-Verticle>service:io.vertx.vertx-mongo-embedded-db</Main-Verticle>
+                                                          
+                                    </manifestEntries>
+                                                    
+                                </archive>
+                                              
+                            </configuration>
+                                        
+                        </execution>
+                                  
+                    </executions>
+                            
+                </plugin>
+                      
+            </plugins>
+                
+        </pluginManagement>
+          
+    </build>
+    
 </project>
