--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,13 @@
       
     <artifactId>vertx-mongo-embedded-db</artifactId>
       
-    <version>3.9.16</version>
+    <version>3.9.17-SNAPSHOT</version>
       
     <name>Vert.x Mongo Embedded DB</name>
       
     <properties>
             
-        <stack.version>3.9.16</stack.version>
+        <stack.version>3.9.17-SNAPSHOT</stack.version>
           
     </properties>
       
